# italian-real-estate-prices

./: .gitignore  .mcp.json  .pre-commit-config.yaml  README.md  devenv.nix  pyproject.toml  requirements.txt  vacancy_map.html
.claude/: permissions_auto_generated.md
configs/: data_sources.yaml  default.yaml
docs/: ISTAT_DATA_GUIDE.md  METHODOLOGY.md  OMI_DOWNLOAD_GUIDE.md  data_dictionary.md  model_improvement_roadmap.md
notebooks/: 01_data_exploration.ipynb
scripts/: download_data.py  download_omi_historical.py  ingest_historical_omi.py  run_pipeline.py
src/: __init__.py  config.py  find_undervalued.py  pipeline.py  train_with_vacancy.py  validate_with_immobiliare.py
src/analysis/: time_series.py
src/data/: __init__.py  download.py  istat_client.py  loaders.py  prepare_supplementary_data.py  schemas.py
src/data/fetchers/: __init__.py  immobiliare_it.py  inside_airbnb.py  istat.py  omi.py
src/data/processors/: __init__.py  airbnb.py  irpef.py  istat.py  omi.py  tourism.py
src/evaluation/: __init__.py  metrics.py  valuation.py
src/features/: __init__.py  base.py  demographic.py  economic.py  geographic.py  pipeline.py  tourism.py  vacancy_classifier.py  vacancy_features.py
src/models/: __init__.py  base.py  ensemble.py  regression.py  training.py
src/utils/: constants.py  logging.py
src/validation/: __init__.py  immobiliare_validator.py
tests/: conftest.py
tests/unit/: test_config.py
tests/unit/features/: test_base.py
tests/unit/models/: test_ensemble.py
