[project]
name = "italian-real-estate-risk"
version = "0.1.0"
description = "Demographic risk model for Italian real estate prices"
requires-python = ">=3.12"

dependencies = [
    # Data Processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "polars>=0.20.0",
    # Machine Learning
    "scikit-learn>=1.4.0",
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "optuna>=3.5.0",
    # Geographic/Spatial
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "libpysal>=4.9.0",
    "esda>=2.5.0",
    "spreg>=1.4.0",
    "folium>=0.15.0",
    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    # Data Validation
    "pandera>=0.18.0",
    "pydantic>=2.5.0",
    # Utilities
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "typer>=0.9.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    # ISTAT API
    "istatapi>=0.2.0",
    # Configuration
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.27.0",
]
scraping = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false
